--- a/codigo/index.html
+++ b/codigo/index.html
@@ -12,6 +12,58 @@
       color: #000;
       transition: background-color 0.3s ease, color 0.3s ease;
     }
+     .hamburguer {
+      font-size: 30px;
+      cursor: pointer;
+      padding: 15px;
+      color: white;
+    }
+
+    /* Menu lateral fechado */
+    .menu-lateral {
+      position: fixed;
+      left: -250px; /* começa escondido */
+      top: 0;
+      width: 250px;
+      height: 100%;
+      background: #222;
+      color: white;
+      transition: 0.3s;
+      padding-top: 60px;
+    }
+
+    /* Quando ativo (aberto) */
+    .menu-lateral.ativo {
+      left: 0;
+    }
+
+    /* Itens do menu */
+    .menu-lateral a {
+      display: block;
+      padding: 15px 25px;
+      color: white;
+      text-decoration: none;
+      transition: background 0.3s;
+    }
+
+    .menu-lateral a:hover {
+      background: #444;
+    }
+
+    /* Fundo escurecido quando o menu abre */
+    .overlay {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0, 0, 0, 0.4);
+      display: none;
+    }
+
+    .overlay.ativo {
+      display: block;
+    }
 
     /* TOPO */
     .topo {
@@ -268,10 +320,84 @@
 <body>
   <div class="topo">
     <div class="menu">
-      <!-- Ícone de menu -->
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
-        <path d="M3 6h18v2H3V6zm0 5h18v2H3v-2zm0 5h18v2H3v-2z"/>
-      </svg>
+     
+      <div class="hamburguer" onclick="abrirMenu()">☰</div>
+
+      <div id="menu" class="menu-lateral">
+                <a href="#">Inicio</a>
+
+               <a href="#">
+                <svg width="28" height="26" viewBox="0 0 28 26" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M27.8,2.9C27,2.2,24.5,0,20.8,0c0,0-5.2,0.4-6.8,3.4C12.4,0.4,7.2,0,7.2,0
+                    C3.5,0,1,2.2,0.2,2.9C0.1,3.1,0,3.3,0,3.5v17.3c0,0.2,0.2,0.4,0.4,0.4c0.1,0,0.2,0,0.3-0.1c2.7-2,5.8-2.1,6.5-2.1c0.1,0,0.1,0,0.1,0
+                    c3.1,0,5.1,1.7,6.1,3l0.5,0.7l0.5-0.7c1-1.3,3-3,6.1-3c0,0,0,0,0.1,0c0.7,0,3.9,0.1,6.5,2.1c0.1,0.1,0.2,0.1,0.3,0.1
+                    c0.2,0,0.4-0.2,0.4-0.4V3.5C28,3.3,27.9,3.1,27.8,2.9z M13.5,5.5v14.9c-1.3-1.3-3.2-2.4-6.1-2.4c0,0-0.1,0-0.2,0
+                    c-0.9,0-3.6,0.1-6.3,1.7V3.6C2.9,1.9,4.9,1,7.1,1c0.5,0,6,0.6,6.4,4.2C13.5,5.2,13.5,5.4,13.5,5.5z M27,19.7
+                    c-2.6-1.6-5.4-1.7-6.3-1.7c-0.1,0-0.1,0-0.2,0c-2.9,0-4.8,1.2-6.1,2.4V5.5c0-0.1,0-0.3,0-0.4C14.9,1.6,20.4,1,20.9,1
+                    c2.2,0,4.3,0.9,6.2,2.6V19.7z"/>
+                </svg>
+
+                 A escola
+
+                </a>
+
+              <a href="#">
+                    <svg width="24" height="24" viewBox="0 0 24 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M9,18c0,1.5,1.2,2.5,3,2.5s3-1,3-2.5c0-1.1-0.7-2-1.7-2.2v-0.1
+                        c0.9-0.2,1.4-1,1.4-1.9c0-1.3-1.1-2.3-2.7-2.3c-1.6,0-2.7,1-2.7,2.3c0,0.9,0.5,1.7,1.4,1.9v0.1C9.7,16,9,16.9,9,18z M10.4,13.9
+                        c0-0.9,0.7-1.5,1.6-1.5s1.6,0.6,1.6,1.5c0,0.9-0.7,1.5-1.6,1.5S10.4,14.8,10.4,13.9z M12,16.3c1.2,0,2,0.7,2,1.7s-0.8,1.7-2,1.7
+                        c-1.2,0-2-0.7-2-1.7S10.8,16.3,12,16.3z M3,5V1c0-0.6,0.4-1,1-1s1,0.4,1,1v4c0,0.6-0.4,1-1,1S3,5.6,3,5z M19,5V1c0-0.6,0.4-1,1-1
+                        s1,0.4,1,1v4c0,0.6-0.4,1-1,1S19,5.6,19,5z M22,2v3c0,1.1-0.9,2-2,2s-2-0.9-2-2V2H6v3c0,1.1-0.9,2-2,2S2,6.1,2,5V2H0v22h24V2H22z
+                        M23,23H1V8h22V23z"/>
+                    </svg>
+
+
+                 Eventos
+                </a>
+              <a href="#">
+                <svg width="22" height="22" viewBox="0 0 22 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M8.5,22h5c0,1.4-1.1,2.5-2.5,2.5S8.5,23.4,8.5,22z M22,20v1H0v-1l2.2-2.2
+                    C2.9,17.1,3.1,16,3.3,15c0.3-2.3,0.3-4.7,0.3-7c0-3.3,2.8-6,6.4-6.4c0-0.2,0-0.4,0-0.6c0-0.6,0.4-1,1-1c0.6,0,1,0.4,1,1
+                    c0,0.2,0,0.4,0,0.6C15.7,2,18.5,4.7,18.5,8c0,2.3,0,4.7,0.3,7c0.1,1,0.3,2,1.1,2.8L22,20z M20.7,20.1l-1.6-1.6
+                    c-0.9-0.9-1.2-2.2-1.4-3.3C17.5,12.9,17.5,8,17.5,8c0-2.8-2.4-5.1-5.6-5.5l-0.8-0.1l-1,0.1C6.9,2.9,4.5,5.2,4.5,8v0.1
+                    c0,2.3,0,4.7-0.3,7.1c-0.1,1.1-0.4,2.4-1.3,3.3l-1.6,1.6H20.7z"/>
+                </svg>
+
+                Nóticias
+              </a>
+              <a href="#">
+                <svg width="34" height="24" viewBox="0 0 34 24" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M34.5,6.1L17.2,0L0,6.1l8,3c-1,1.8-2.3,4.1-2.7,5.8c0.6-0.1,1.1,0,1.7,0
+                    c0.6,0,1.2,0,1.8,0.1v2.3C8.3,17.9,8,19,8,19.5V22h2.5v-2.5c0-0.5-0.3-1.6-0.8-2.2v-2.1c2.9,0.5,5.5,1.8,7.5,3.8
+                    c2.6-2.6,6.2-4.2,10.2-4.2c0.6,0,1.3,0,1.9,0.1c-0.4-2-1.7-4.3-2.7-5.9L34.5,6.1z M17.2,1l14.5,5.1l-14.5,5.5l-6.2-2.3l5.2-2.2
+                    c0.3,0.2,0.6,0.4,1,0.4c0.7,0,1.3-0.6,1.3-1.2S17.9,5,17.2,5c-0.7,0-1.3,0.5-1.3,1.2L9.7,8.8l-7-2.7L17.2,1z M7,14.1
+                    c-0.2,0-0.3,0-0.5,0c0.5-1.1,1.2-2.6,2.2-4.4v4.5C8.2,14.1,7.6,14.1,7,14.1z M28.1,14.1c-0.2,0-0.4,0-0.6,0c-3.9,0-7.6,1.3-10.2,3.7
+                    c-2.1-1.8-4.6-3-7.5-3.4V9.8l0.1,0l7.4,2.8l8.6-3.3l-0.1,0C26.5,10.6,27.5,12.4,28.1,14.1z"/>
+                </svg>
+
+                Areás
+
+            </a>
+
+            <a href="#">
+                <svg width="26" height="27" viewBox="0 0 26 27" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M20.9,4c-2.1-2.6-5.6-4-8.9-4C5.4,0,0,5.4,0,12s5.4,12,12,12
+                    c2.6,0,5-0.8,7-2.3l-0.6-0.8c-1.8,1.3-4,2.1-6.4,2.1C5.9,23,1,18.1,1,12S5.9,1,12,1c2.6,0,5.2,1,7.2,2.7c2.1,1.8,2.8,4.5,2.7,7.2
+                    c0,1.5-0.2,3.2-1.3,4.4c-1.2,1.3-3.5,1.8-4.4,1c-1.4-1.4-0.2-7,0.4-8.9l-1-0.3c-0.1,0.3-0.3,1.1-0.5,2.3c-0.1-0.2-0.2-0.4-0.3-0.6
+                    c-0.6-1.2-1.7-2-2.8-2.1c-0.2,0-0.3,0-0.5,0c-2.2,0-4.1,2-4.5,4.8c-0.4,3,1.1,5.6,3.4,6c0.2,0,0.3,0,0.5,0c1.5,0,3-1,3.8-2.6
+                    c0.1,0.9,0.3,1.7,0.8,2.2c1.1,1.1,4,1,5.9-1c1.5-1.5,1.7-3.7,1.6-5.7C22.8,8.1,22.3,5.8,20.9,4z M14.4,12.4
+                    c-0.3,2.2-1.9,3.9-3.5,3.9c-0.1,0-0.2,0-0.4,0c-1.8-0.3-2.9-2.4-2.6-4.8c0.3-2.2,1.9-3.9,3.5-3.9c0.1,0,0.2,0,0.4,0
+                    C13.6,7.8,14.7,10,14.4,12.4z"/>
+                </svg>
+
+
+                Contato
+
+            </a>
+            </div>
+     <!-- Fundo escurecido -->
+    <div id="overlay" class="overlay" onclick="fecharMenu()"></div>
+
       <h1>Escola Estadual Sanico Teles</h1>
     </div>
 
@@ -294,7 +420,7 @@
   <h1 class="tit">Apresentação da escola</h1>
   <section class="hero-section">
     <div class="hero-content">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quam velit, vulputate eu pharetra nec, mattis ac neque. Duis vulputate commodo lectus, ac blandit elit tincidunt id.</p>
+      <p> Escola Estadual Sanico Teles</p>
       <div class="button-container">
         <button class="cta-button">saber mais</button>
       </div>
@@ -326,7 +452,7 @@
   </div>
   
   <!-- Botão "ver notícias" separado -->
-  <div style="width: 80%; margin: 0 auto;">
+  <div> style="width: 80%; margin: 0 auto;">
     <div class="button-container">
       <button class="cta-button">ver notícias</button>
     </div>
@@ -349,6 +475,16 @@
   </div>
 
   <script>
+
+     function abrirMenu() {
+      document.getElementById('menu').classList.add('ativo');
+      document.getElementById('overlay').classList.add('ativo');
+    }
+
+    function fecharMenu() {
+      document.getElementById('menu').classList.remove('ativo');
+      document.getElementById('overlay').classList.remove('ativo');
+    }
     // Aguarda o carregamento completo do DOM
     document.addEventListener('DOMContentLoaded', function() {
       // Elementos do DOM
