--- a/codigo/areas.html
+++ b/codigo/areas.html
@@ -3,34 +3,34 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Áreas — Escola Estadual</title>
+<title>Áreas — E. E. Sanico Teles</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
-:root{
-  --bg-color: #f0f0f0;
+:root {
+  --bg-color: #f2f4ff;
   --text-color: #232323;
   --card-bg: #f7f7f7;
-  --card-border: #dcdcdc;
-  --card-shadow: rgba(0,0,0,0.12);
-  --primary: #0d6efd;
-  --modal-bg: #ffffff;
+  --card-border: #ddd;
+  --card-shadow: rgba(0, 0, 0, 0.08);
+  --primary: #232323;
+  --button-hover: #333;
 }
 
-body.dark-mode{
-  --bg-color: #121212;
+body.dark-mode {
+  --bg-color: #0f0f0f;
   --text-color: #e7e7e7;
-  --card-bg: #1e1e1e;
-  --card-border: #2b2b2b;
-  --card-shadow: rgba(0,0,0,0.45);
-  --primary: #3b82f6;
-  --modal-bg: #181818;
+  --card-bg: #1a1a1a;
+  --card-border: rgba(255,255,255,0.05);
+  --card-shadow: rgba(255,255,255,0.06);
+  --primary: #e7e7e7;
+  --button-hover: #444;
 }
 
-*{box-sizing:border-box;margin:0;padding:0}
+* { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
   transition: background-color .25s, color .25s;
@@ -39,191 +39,212 @@ body {
 
 /* TOPO */
 .topo {
-  background-color: rgb(0,21,112);
+  background-color: rgb(19, 79, 189);
   color: #fff;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:12px 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 12px 18px;
+  position: relative;
+  box-shadow: 0 0 25px rgba(0,153,255,0.4);
+  border-bottom: 2px solid rgba(0,153,255,0.4);
 }
-.tit{display:flex;align-items:center;gap:12px}
-.hamburguer{font-size:28px;cursor:pointer;color:#fff}
 
-/* TOPO - MODO E ÍCONE */
-.modo{
-  display:flex;
-  align-items:center;
-  gap:14px;
+/* LOGO E TÍTULO */
+.tit-escola {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.logo {
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+  box-shadow: 0 0 20px rgba(255,255,255,1);
+  animation: brilhoLogo 2.5s infinite alternate;
+}
+
+@keyframes brilhoLogo {
+  from { box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); }
+  to { box-shadow: 0 0 24px rgba(255, 255, 255, 1); }
+}
+
+.nome-escola {
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 0.5px;
+  background: linear-gradient(90deg,#fff,#dbe6ff,#fff);
+  background-size: 200% auto;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  animation: brilhoTexto 2s linear infinite;
+  filter: drop-shadow(0 0 15px rgba(255,255,255,1));
+}
+
+.titulo-central {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  font-weight: bold;
+  background: linear-gradient(90deg,#fff,#cddcff,#fff);
+  background-size: 200% auto;
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  animation: brilhoTexto 2s linear infinite;
+  filter: drop-shadow(0 0 15px rgba(255,255,255,1));
+}
+
+@keyframes brilhoTexto {
+  to { background-position: 200% center; }
+}
+
+/* HAMBURGUER */
+.hamburguer {
+  font-size: 28px;
+  cursor: pointer;
+  color: #fff;
+}
+
+/* MODO E ÍCONE */
+.modo {
+  display: flex;
+  align-items: center;
+  gap: 14px;
   flex-direction: column;
 }
-.theme-switch{position:relative;width:48px;height:26px;display:inline-block}
-.theme-switch input{opacity:0; width:0;height:0}
-.slider{
-  position:absolute;inset:0;border-radius:999px;background:#ebebeb;
-  border:1px solid rgba(0,0,0,0.12);
-  display:flex;align-items:center;padding:4px;justify-content:flex-start;
-  transition:background .22s, justify-content .22s;
+
+/* SWITCH DE TEMA */
+.theme-switch { position: relative; width: 48px; height: 26px; display: inline-block; }
+.theme-switch input { opacity: 0; width: 0; height: 0; }
+
+.slider {
+  position: absolute; inset: 0; border-radius: 999px;
+  background: #ebebeb; border: 1px solid rgba(0,0,0,0.12);
+  display: flex; align-items: center; padding: 4px;
+  justify-content: flex-start; transition: background .22s, justify-content .22s;
 }
-.slider .emoji{
-  width:18px;height:18px;border-radius:50%;display:flex;align-items:center;justify-content:center;
-  background:#232323;color:#fff;font-size:12px;transition:background .22s;
+
+.slider .emoji {
+  width: 18px; height: 18px; border-radius: 50%;
+  display: flex; align-items: center; justify-content: center;
+  background: #232323; color: #fff; font-size: 12px; transition: background .22s;
 }
-input:checked + .slider{ justify-content:flex-end; background:#333; }
-input:checked + .slider .emoji{ background:#f3f3f3; color:#000 }
+
+input:checked + .slider { justify-content: flex-end; background: #333; }
+input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
 
 /* MENU LATERAL */
-.menu-lateral{
-  position:fixed;
-  left:-250px;
-  top:0;
-  width:250px;
-  height:100%;
-  background:#222;
-  color:white;
-  transition:left .28s;
-  padding-top:60px;
-  z-index:40;
+.menu-lateral {
+  position: fixed;
+  left: -250px;
+  top: 0;
+  width: 250px;
+  height: 100%;
+  background: #222;
+  color: white;
+  transition: left .28s;
+  padding-top: 60px;
+  z-index: 40;
 }
-.menu-lateral.ativo{left:0}
-.menu-lateral a{display:block;padding:14px 20px;color:#fff;text-decoration:none}
-.menu-lateral a:hover{background:#444}
-.overlay{
-  position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.4);
-  display:none;z-index:30;
-}
-.overlay.ativo{display:block}
+.menu-lateral.ativo { left: 0; }
+.menu-lateral a { display: block; padding: 14px 20px; color: #fff; text-decoration: none; }
+.menu-lateral a:hover { background: #444; }
 
-/* Áreas Modernas */
-.areas-container {
-  display: flex;
-  flex-direction: column;
-  gap: 40px;
-  max-width: 980px;
-  margin: 50px auto 40px auto;
-  padding-bottom: 40px;
+.overlay {
+  position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+  background: rgba(0, 0, 0, 0.4);
+  display: none; z-index: 30;
 }
+.overlay.ativo { display: block; }
+
+/* BALÕES */
 .area-block {
   background: var(--card-bg);
-  border-radius: 18px;
-  box-shadow: 0 6px 18px 0 var(--card-shadow);
-  transition: transform 0.2s, background .3s;
-  padding: 32px;
-  position: relative;
+  border-radius: 20px;
+  border: 1px solid var(--card-border);
+  box-shadow: 0 0 15px var(--card-shadow);
+  padding: 24px;
+  margin: 30px auto;
+  max-width: 900px;
+  transition: all .3s ease;
 }
 .area-block:hover {
-  transform: scale(1.025);
-  box-shadow: 0 8px 25px 0 rgba(58, 77, 202, 0.15);
+  transform: scale(1.01);
+  box-shadow: 0 0 25px var(--card-shadow);
 }
+
 .area-title {
-  font-size: 2rem;
-  margin-bottom: 22px;
-  color: #21304c;
-  letter-spacing: 1px;
+  font-size: 1.4rem;
   font-weight: bold;
+  color: var(--text-color);
+  margin-bottom: 16px;
+  text-align: center;
 }
+
 .area-actions {
   display: flex;
-  gap: 28px;
+  gap: 18px;
   flex-wrap: wrap;
+  justify-content: center;
 }
+
 .action-card {
-  background: #fafbff;
+  flex: 1;
+  min-width: 220px;
+  background: var(--card-bg);
   border-radius: 12px;
-  padding: 20px 28px;
-  box-shadow: 0 2px 8px 0 rgba(34,57,101,0.04);
-  min-width: 210px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  transition: background 0.22s, box-shadow 0.18s;
-  position: relative;
+  padding: 16px;
+  box-shadow: 0 0 12px var(--card-shadow);
+  transition: all 0.3s ease;
 }
 .action-card:hover {
-  background: #e1e6f9;
-  box-shadow: 0 4px 16px 0 rgba(54,69,148,0.13);
+  transform: scale(1.02);
+  box-shadow: 0 0 18px var(--card-shadow);
 }
+
 .action-title {
-  font-size: 1.1rem;
-  color: #4146a9;
-  font-weight: bold;
+  font-size: 1.05rem;
+  font-weight: 600;
+  color: var(--text-color);
+  margin-bottom: 8px;
 }
+
 .action-desc {
-  font-size: 0.98rem;
-  color: #3d425a;
-  margin: 7px 0 13px 0;
+  font-size: 0.9rem;
+  color: var(--text-color);
+  margin-bottom: 10px;
 }
+
 .action-btn {
-  font-size: 0.96rem;
-  padding: 8px 18px;
-  border-radius: 8px;
-  border: none;
-  background: #536dff;
+  background-color: #444;
   color: #fff;
+  border: none;
+  padding: 10px 18px;
+  border-radius: 8px;
   cursor: pointer;
-  transition: background 0.18s;
+  transition: all 0.3s ease;
 }
 .action-btn:hover {
-  background: #3748b5;
+  background-color: var(--button-hover);
+  transform: scale(1.05);
 }
-@media (max-width: 720px) {
-  .areas-container { padding: 12px; }
-  .area-block { padding: 16px; }
-  .area-actions { flex-direction: column; gap: 16px; }
-}
-/* Ajustes para os balões e textos no modo escuro */
-body.dark-mode .area-block {
-  background-color: #232737; /* fundo escuro mais agradável */
-  box-shadow: 0 6px 24px rgba(18, 22, 32, 0.6);
-}
-
-body.dark-mode .area-title {
-  color: #a7b5fa; /* tom claro e suave para título */
-}
-
-body.dark-mode .action-card {
-  background-color: #2c3243; /* balões mais escuros */
-  box-shadow: 0 4px 18px rgba(10, 15, 30, 0.8);
-  color: #e7e7e7;
-  border: 1px solid #384050;
-  transition: background-color 0.3s, box-shadow 0.3s;
-}
-
-body.dark-mode .action-card:hover {
-  background-color: #3a4060;
-  box-shadow: 0 6px 20px rgba(60, 70, 105, 0.9);
-}
-
-body.dark-mode .action-title {
-  color: #bac3d4;
-}
-
-body.dark-mode .action-desc {
-  color: #d0d5e3;
-}
-
-body.dark-mode .action-btn {
-  background-color: #536dff;
-  color: #fff;
-  transition: background-color 0.3s;
-}
-
-body.dark-mode .action-btn:hover {
-  background-color: #3748b5;
-}
-
 </style>
 </head>
 <body>
 <!-- TOPO -->
 <div class="topo">
-  <div class="tit">
+  <div class="tit-escola">
     <div class="hamburguer" onclick="abrirMenu()">☰</div>
-    <h1 style="font-size:18px;margin:0">
-      <span style="font-size:20px">🏫</span> Áreas da Escola
-    </h1>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSoCakRBO6pZxb-xrHIZAI4QZS_YTVVM6at-g&s" alt="Logo da Escola" class="logo">
+    <span class="nome-escola">E. E. Sanico Teles</span>
   </div>
+  <div class="titulo-central">Áreas</div>
   <div class="modo">
-    <i class="fa-regular fa-user" style="font-size:22px;color:#fff"></i>
     <label class="theme-switch" title="Alternar tema">
       <input type="checkbox" id="theme-toggle" />
       <span class="slider"><span class="emoji" id="emojiToggle">🌞</span></span>
@@ -233,92 +254,83 @@ body.dark-mode .action-btn:hover {
 
 <!-- MENU -->
 <div id="menu" class="menu-lateral">
-  <a href="#">Início</a>
-  <a href="#">A Escola</a>
-  <a href="#">Eventos</a>
-  <a href="#">Notícias</a>
-  <a href="#">Áreas</a>
-  <a href="#">Contato</a>
+  <a href="index.html">Início</a>
+  <a href="historia.html">A Escola</a>
+  <a href="eventos.html">Eventos</a>
+  <a href="noticias.html">Notícias</a>
+  <a href="areas.html">Áreas</a>
+  <a href="contato.html">Contato</a>
 </div>
 <div id="overlay" class="overlay" onclick="fecharMenu()"></div>
 
-<!-- CONTEÚDO PRINCIPAL -->
-<div class="areas-container">
-  <!-- Alunos -->
-  <div class="area-block">
-    <div class="area-title">Alunos</div>
-    <div class="area-actions">
-      <div class="action-card">
-        <div class="action-title">Provas</div>
-        <div class="action-desc">Acesso às provas, simulados e resultados.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
-      <div class="action-card">
-        <div class="action-title">Boletins</div>
-        <div class="action-desc">Consulte seu boletim escolar atualizado.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
+<!-- CONTEÚDO -->
+<div class="area-block">
+  <div class="area-title">Alunos</div>
+  <div class="area-actions">
+    <div class="action-card">
+      <div class="action-title">Provas</div>
+      <div class="action-desc">Acesso às provas, simulados e resultados.</div>
+      <button class="action-btn">Acessar</button>
+    </div>
+    <div class="action-card">
+      <div class="action-title">Boletins</div>
+      <div class="action-desc">Consulte seu boletim escolar atualizado.</div>
+      <button class="action-btn">Acessar</button>
     </div>
   </div>
-  <!-- Pais -->
-  <div class="area-block">
-    <div class="area-title">Pais</div>
-    <div class="area-actions">
-      <div class="action-card">
-        <div class="action-title">Reuniões</div>
-        <div class="action-desc">Agendas, pautas e atas de reuniões.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
-      <div class="action-card">
-        <div class="action-title">Eventos</div>
-        <div class="action-desc">Informações sobre eventos escolares e datas importantes.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
+</div>
+
+<div class="area-block">
+  <div class="area-title">Pais</div>
+  <div class="area-actions">
+    <div class="action-card">
+      <div class="action-title">Reuniões</div>
+      <div class="action-desc">Agendas, pautas e atas de reuniões.</div>
+      <button class="action-btn">Acessar</button>
+    </div>
+    <div class="action-card">
+      <div class="action-title">Eventos</div>
+      <div class="action-desc">Informações sobre eventos escolares e datas importantes.</div>
+      <button class="action-btn">Acessar</button>
     </div>
   </div>
-  <!-- Professores -->
-  <div class="area-block">
-    <div class="area-title">Professores</div>
-    <div class="area-actions">
-      <div class="action-card">
-        <div class="action-title">Módulo</div>
-        <div class="action-desc">Gerenciar conteúdos e suas turmas.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
-      <div class="action-card">
-        <div class="action-title">Fechamento de notas</div>
-        <div class="action-desc">Lançamento e consulta de notas e avaliações.</div>
-        <button class="action-btn">Acessar</button>
-      </div>
+</div>
+
+<div class="area-block">
+  <div class="area-title">Professores</div>
+  <div class="area-actions">
+    <div class="action-card">
+      <div class="action-title">Módulo</div>
+      <div class="action-desc">Gerenciar conteúdos e suas turmas.</div>
+      <button class="action-btn">Acessar</button>
+    </div>
+    <div class="action-card">
+      <div class="action-title">Fechamento de notas</div>
+      <div class="action-desc">Lançamento e consulta de notas e avaliações.</div>
+      <button class="action-btn">Acessar</button>
     </div>
   </div>
 </div>
 
 <script>
-function abrirMenu(){
-  document.getElementById('menu').classList.add('ativo');
-  document.getElementById('overlay').classList.add('ativo');
-}
-function fecharMenu(){
-  document.getElementById('menu').classList.remove('ativo');
-  document.getElementById('overlay').classList.remove('ativo');
-}
+function abrirMenu(){menu.classList.add('ativo');overlay.classList.add('ativo');}
+function fecharMenu(){menu.classList.remove('ativo');overlay.classList.remove('ativo');}
 
-/* Tema escuro */
-const toggle = document.getElementById('theme-toggle');
-const emoji = document.getElementById('emojiToggle');
+/* TEMA */
+const toggle=document.getElementById('theme-toggle');
+const emoji=document.getElementById('emojiToggle');
 function applyTheme(isDark){
-  document.body.classList.toggle('dark-mode', isDark);
-  emoji.textContent = isDark ? "🌙" : "🌞";
-  toggle.checked = isDark;
+  document.body.classList.toggle('dark-mode',isDark);
+  emoji.textContent=isDark?"🌙":"🌞";
+  toggle.checked=isDark;
 }
-toggle.addEventListener('change', () => {
+toggle.addEventListener('change',()=>{
   applyTheme(toggle.checked);
-  localStorage.setItem('theme', toggle.checked ? 'dark' : 'light');
+  localStorage.setItem('theme',toggle.checked?'dark':'light');
 });
 (function init(){
-  const saved = localStorage.getItem('theme');
-  applyTheme(saved === "dark");
+  const saved=localStorage.getItem('theme');
+  applyTheme(saved==="dark");
 })();
 </script>
 </body>
