--- a/codigo/eventos.html
+++ b/codigo/eventos.html
@@ -8,33 +8,52 @@
 
 <style>
 :root {
-  --bg-color: #f0f0f0;
-  --text-color: #232323;
-  --card-bg: #ffffff;
+  --bg-color: #eeeeee;
+  --text-color: #222222;
+  --card-bg: #f9f9f9;
   --card-border: #dcdcdc;
-  --card-shadow: rgba(0, 0, 0, 0.15);
-  --primary: #0d6efd;
-  --modal-bg: #ffffff;
-  --table-header: #e7ebff;
-  --table-text: #21304c;
+  --card-shadow: rgba(0, 0, 0, 0.08);
+  --primary: #3c3c3c;         /* cinza escuro suave (em vez de preto) */
+  --modal-bg: #f9f9f9;
+  --table-header: #e9e9e9;
+  --table-text: #1f1f1f;
+  --button-hover: #2f2f2f;     /* hover um pouco mais forte */
 }
 
 body.dark-mode {
-  --bg-color: #0f0f0f;
-  --text-color: #e7e7e7;
-  --card-bg: #1a1a1a;
-  --card-border: #333;
+  --bg-color: #0d0d0d;
+  --text-color: #d9d9d9;
+  --card-bg: #151515;
+  --card-border: #2b2b2b;
   --card-shadow: rgba(0, 0, 0, 0.6);
-  --primary: #3b82f6;
-  --modal-bg: #181818;
-  --table-header: #1e3a8a;
-  --table-text: #ffffff;
+  --primary: #555;          /* cinza claro, não branco */
+  --modal-bg: #191919;
+  --table-header: #1e1e1e;
+  --table-text: #e2e2e2;
+  --button-hover: #444;     /* leve escurecimento no hover */
 }
+
+/* Botão padrão */
+button, .action-btn {
+  background-color:  #444;
+  color: var(--bg-color);
+  border: none;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px var(--card-shadow);
+  cursor: pointer;
+  transition: background-color 0.25s, color 0.25s;
+}
+
+button:hover, .action-btn:hover {
+  background-color: var(--button-hover);
+}
+
 
 * { box-sizing: border-box; margin: 0; padding: 0; }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", Arial, sans-serif;
   background-color: var(--bg-color);
   color: var(--text-color);
   transition: background-color .25s, color .25s;
@@ -50,6 +69,7 @@ body {
   align-items: center;
   padding: 12px 18px;
   position: relative;
+  box-shadow: 0 3px 10px rgba(0,0,0,0.25);
 }
 
 /* LOGO E TÍTULO */
@@ -64,12 +84,12 @@ body {
   height: 45px;
   border-radius: 50%;
   object-fit: cover;
-  box-shadow: 0 0 16px rgba(255, 255, 255, 0.9);
-  animation: brilhoLogo 3s infinite alternate;
+  box-shadow: 0 0 18px rgba(255, 255, 255, 1);
+  animation: brilhoLogo 2.5s infinite alternate;
 }
 
 @keyframes brilhoLogo {
-  from { box-shadow: 0 0 12px rgba(255, 255, 255, 0.6); }
+  from { box-shadow: 0 0 10px rgba(255, 255, 255, 0.7); }
   to { box-shadow: 0 0 24px rgba(255, 255, 255, 1); }
 }
 
@@ -83,7 +103,7 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   animation: brilhoTexto 2s linear infinite;
-  filter: drop-shadow(0 0 8px rgba(255,255,255,0.8));
+  filter: drop-shadow(0 0 10px rgba(255,255,255,0.9));
 }
 
 .titulo-central {
@@ -98,7 +118,7 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   animation: brilhoTexto 2s linear infinite;
-  filter: drop-shadow(0 0 8px rgba(255,255,255,0.8));
+  filter: drop-shadow(0 0 10px rgba(255,255,255,0.9));
 }
 
 @keyframes brilhoTexto {
@@ -164,24 +184,30 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
 }
 .overlay.ativo { display: block; }
 
-/* BALÃO DE EVENTOS */
+/* BALÃO DE EVENTOS — estilo idêntico ao .area-block */
 .eventos-container {
   max-width: 950px;
   margin: 60px auto;
   background: var(--card-bg);
-  box-shadow: 0 8px 22px 0 var(--card-shadow);
   border-radius: 22px;
   padding: 36px;
   border: 1px solid var(--card-border);
+  box-shadow: 0 8px 24px var(--card-shadow);
+  transition: transform 0.25s ease, box-shadow 0.25s ease;
+}
+.eventos-container:hover {
+  transform: translateY(-4px);
+  box-shadow: 0 12px 28px rgba(0,0,0,0.15);
 }
 
 /* TÍTULO */
 .eventos-titulo {
-  font-size: 1.8rem;
+  font-size: 1.9rem;
   font-weight: bold;
   color: var(--text-color);
   margin-bottom: 25px;
   text-align: center;
+  text-shadow: 0 0 10px rgba(13,110,253,0.4);
 }
 
 /* CABEÇALHO DO CALENDÁRIO */
@@ -196,17 +222,22 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
   background-color: var(--primary);
   color: #fff;
   border: none;
-  border-radius: 8px;
-  padding: 8px 16px;
+  border-radius: 12px;
+  padding: 10px 18px;
   cursor: pointer;
-  font-size: 0.95rem;
-  transition: background .25s;
+  font-size: 1rem;
+  font-weight: 500;
+  transition: all .25s ease;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
-.calendario-header button:hover { background-color: #3453c5; }
+.calendario-header button:hover {
+  background-color: var(--button-hover);
+  transform: translateY(-2px);
+}
 
 /* SUBTÍTULO */
 .subtitulo-mes {
-  font-size: 1.2rem;
+  font-size: 1.25rem;
   margin-bottom: 12px;
   color: var(--text-color);
   font-weight: bold;
@@ -218,10 +249,10 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
   width: 100%;
   border-collapse: collapse;
   background: var(--modal-bg);
-  border-radius: 12px;
+  border-radius: 14px;
   overflow: hidden;
   margin-top: 8px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+  box-shadow: 0 3px 10px rgba(0,0,0,0.08);
 }
 .tabela-eventos th {
   background-color: var(--table-header);
@@ -247,11 +278,11 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
   top: 50%; left: 50%;
   transform: translate(-50%, -50%) scale(0.9);
   background-color: var(--modal-bg);
-  border-radius: 16px;
-  box-shadow: 0 6px 24px var(--card-shadow);
+  border-radius: 18px;
+  box-shadow: 0 8px 26px var(--card-shadow);
   padding: 25px 30px;
   z-index: 100;
-  width: 320px; max-width: 90%;
+  width: 340px; max-width: 90%;
   opacity: 0;
   transition: all .25s ease;
   display: none;
@@ -263,25 +294,32 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
 }
 .modal-meses h3 {
   text-align: center;
-  margin-bottom: 15px;
+  margin-bottom: 18px;
   color: var(--text-color);
+  font-weight: 600;
 }
 .meses-grid {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 10px;
+  gap: 12px;
 }
 .meses-grid button {
   background: var(--primary);
   border: none;
   color: #fff;
-  border-radius: 8px;
-  padding: 8px;
+  border-radius: 10px;
+  padding: 10px;
   cursor: pointer;
   font-size: 0.9rem;
-  transition: background .2s;
+  font-weight: 500;
+  transition: all .2s;
+  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
 }
-.meses-grid button:hover { background: #3453c5; }
+.meses-grid button:hover {
+  background: var(--button-hover);
+  transform: translateY(-2px);
+}
+
 </style>
 </head>
 <body>
@@ -294,7 +332,6 @@ input:checked + .slider .emoji { background: #f3f3f3; color: #000; }
   </div>
   <div class="titulo-central">Eventos</div>
   <div class="modo">
-    <i class="fa-regular fa-user" style="font-size:22px;color:#fff"></i>
     <label class="theme-switch" title="Alternar tema">
       <input type="checkbox" id="theme-toggle" />
       <span class="slider"><span class="emoji" id="emojiToggle">🌞</span></span>
