--- a/codigo/história.html
+++ b/codigo/história.html
@@ -89,14 +89,15 @@
     font-weight:700;
     margin-bottom:18px;
     text-align:center;
-    text-shadow:0 0 10px rgba(13,110,253,0.18);
+    text-shadow: 0 0 10px rgba(13,110,253,0.4);
+    color: var(--text-color);
   }
 
   .card {
-    background: var(--card-bg);
-    border-radius: 16px;
-    border: 1px solid var(--card-border);
-    box-shadow: 0 8px 22px var(--card-shadow);
+     background: var(--card-bg);
+  border-radius: 20px;
+  border: 1px solid var(--card-border);
+  box-shadow: 0 0 15px var(--card-shadow);
     padding: 20px;
     margin: 18px auto;
     max-width: 1100px;
@@ -116,10 +117,12 @@
   .texto-box{
     flex: 1 1 520px;
     min-width:300px;
-    background: linear-gradient(180deg,#ffffff,#fbfbff);
+    
     padding:22px;
-    border-radius:12px;
-    box-shadow:0 10px 24px rgba(0,0,0,0.06);
+     background: var(--card-bg);
+    border-radius: 20px;
+    border: 1px solid var(--card-border);
+    box-shadow: 0 0 15px var(--card-shadow);
     display:flex;
     flex-direction:column;
     justify-content:center; /* centraliza verticalmente para igual altura */
@@ -175,15 +178,42 @@
   }
 
   /* DARK MODE */
-  body.dark-mode{
-    --bg-color: #0f1720;
-    --text-color: #e6eef7;
-    --card-bg: #0f1726;
-    --card-border: rgba(255,255,255,0.04);
-    --card-shadow: rgba(255,255,255,0.03);
-  }
-  body.dark-mode .topo{background:#0b2a66}
-  body.dark-mode .rodape{background:#0b2a66}
+ /* DARK MODE — apenas sections, cards e conteúdo interno */
+body.dark-mode{
+  --bg-color: #0f1720;
+  --text-color: #e6eef7;
+  --card-bg: #0f1726;
+  --card-border: rgba(255,255,255,0.06);
+  --card-shadow: rgba(255,255,255,0.08);
+}
+
+/* NÃO alterar topo no dark mode */
+/* NÃO alterar rodapé no dark mode */
+body.dark-mode .topo {
+  background: var(--topo-bg);
+  color: #fff;
+  box-shadow: 0 0 25px var(--topo-shadow);
+}
+body.dark-mode .rodape {
+  background: var(--topo-bg);
+  color: #fff;
+  box-shadow: 0 0 25px var(--topo-shadow);
+}
+
+/* balões (caixa de texto) no dark mode */
+body.dark-mode .texto-box{
+  background: linear-gradient(180deg,#141c26,#0f1720);
+  box-shadow:0 10px 24px rgba(255,255,255,0.06);
+}
+
+/* imagem (continua igual, não muda nada) */
+
+/* Caixa do endereço (lado do mapa) */
+body.dark-mode .endereco-box{
+  background: var(--card-bg);
+  border-color: var(--card-border);
+  box-shadow:0 10px 26px var(--card-shadow);
+}
 
   /* Caixa do mapa + endereço lado a lado */
   .loc-container{
