--- a/codigo/index.html
+++ b/codigo/index.html
@@ -218,7 +218,7 @@ input:checked + .slider .emoji {
   font-size: 22px;
   margin: 45px 0 12px 60px;
   font-weight: bold;
-  text-shadow: 0 0 10px var(--title-glow);
+ text-shadow: 0 0 10px rgba(13,110,253,0.4);
 }
 
 /* ------------------------------------------
@@ -325,9 +325,9 @@ input:checked + .slider .emoji {
 
 <h1 class="tit">Apresentação da escola</h1>
 <section class="hero-section">
-  <p>Escola Estadual Sanico Teles</p>
+  <p>A Sanico Teles oferece Ensino Fundamental, Ensino Médio e cursos técnicos como Informática e Energias Renováveis. Com estrutura moderna e equipes dedicadas, buscamos formar cidadãos preparados para o mundo atual.</p>
   <div class="button-container">
-    <button class="cta-button">saber mais</button>
+    <button class="cta-button" onclick="window.location.href='historia.html'">saber mais</button>
   </div>
 </section>
 
