--- a/codigo/index.html
+++ b/codigo/index.html
@@ -413,9 +413,28 @@ const overlay = document.getElementById("overlay");
 const toggle = document.getElementById("theme-toggle");
 const emoji = document.querySelector(".emoji");
 
+// Salvar tema quando mudar
 toggle.addEventListener("change", () => {
   document.body.classList.toggle("dark-mode");
   emoji.textContent = toggle.checked ? "🌙" : "🌞";
+
+  const tema = toggle.checked ? "dark" : "light";
+  localStorage.setItem("tema", tema);
+});
+
+// Carregar tema salvo ao abrir a página
+document.addEventListener("DOMContentLoaded", () => {
+  const temaSalvo = localStorage.getItem("tema");
+
+  if (temaSalvo === "dark") {
+    document.body.classList.add("dark-mode");
+    toggle.checked = true;
+    emoji.textContent = "🌙";
+  } else {
+    document.body.classList.remove("dark-mode");
+    toggle.checked = false;
+    emoji.textContent = "🌞";
+  }
 });
 
 
